# QT5-QML_Exm

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.rst  configmanager.cpp  configmanager.h  configreader.cpp  configreader.h  main.cpp  misc.cpp  misc.h  qml.qrc  qtquickcontrols2.conf  yamltree.cpp  yamltree.h
qml/: ConfigItem.qml  InputWidget.qml  IntegerField.qml  main.qml
